# MyLifeOS

./: .env.example  .gitignore  CLAUDE.md  README.md  frontend-design.md  next-actionitems.md  next_steps.md  pyproject.toml  spec.md  status.md
app/: __init__.py  main.py
app/api/: form_utils.py  routes_admin.py  routes_cards.py  routes_chat.py  routes_conflicts.py  routes_dashboard.py  routes_entries.py  routes_goals.py  routes_ideas.py  (+10 more)
docs/: benchmark_queries.txt  search_benchmark_contract.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
migrations/: 0001_lifeos_v2.sql  0002_projects_tasks.sql  0003_thoughts_ideas_cards.sql  0004_idea_entry_notes.sql
reports/: search_benchmark_5000.json  search_benchmark_50000.json
schemas/: distill_outcomes.json  entity_chat_response.json  goal_chat_response.json  ingest_extract.json  weekly_goal_review.json
tests/: test_benchmark_search_tool.py  test_capture_batch.py  test_cards_api.py  test_chat_contextual.py  test_conflicts_api.py  test_dashboard_api.py  test_distill_actions.py  test_entries_queries.py  test_entries_todo_tasks.py  test_entries_tool_calls.py  test_epics_6_7_api.py  test_epics_8_10_api.py  test_hashing.py  test_ideas_api.py  test_indexer.py  test_llm_config_api.py  test_llm_config_service.py  test_llm_service.py  test_markdown_roundtrip.py  test_migrations.py  test_observations.py  test_process_inbox_api.py  test_prompt_loader.py  test_prompts_api.py  test_runs_api.py  test_search_api.py  test_search_fixture_tool.py  test_tasks_projects_api.py  test_thoughts_api.py
(+146 files in other folders)
